umol-models-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@pubchem_Structure2D_COMPOUND_CID_12559164.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C7H11+
      atom_count: 18
      bond_count: 19
      property_count: 29
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C7H11+
      atom_count: 18
      bond_count: 19
      property_count: 29
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C7H11+
      atom_count: 18
      bond_count: 19
      extended_atoms: 0
      extended_bonds: 0
      property_count: 29
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C7H11+
      atom_count: 18
      bond_count: 19
      extended_atoms: 0
      extended_bonds: 0
      property_count: 29
      rgroup_count: 0
      sgroup_count: 0
