umol-models-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@pubchem_Structure2D_COMPOUND_CID_16212388.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C2H2B10
      atom_count: 14
      bond_count: 15
      property_count: 24
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C2H2B10
      atom_count: 14
      bond_count: 15
      property_count: 24
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C2H2B10
      atom_count: 14
      bond_count: 15
      extended_atoms: 0
      extended_bonds: 0
      property_count: 24
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C2H2B10
      atom_count: 14
      bond_count: 15
      extended_atoms: 0
      extended_bonds: 0
      property_count: 24
      rgroup_count: 0
      sgroup_count: 0
